Make jonosija contain jarjestyskriteerituloket as jsonb field